Fix status of order and payment